<resources>
    <string name="app_name">MyTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acasa">Acasa</string>
    <string name="lista_sarcini">Lista sarcini</string>
    <string name="study">Time to study!</string>
    <string name="statistici">Statistici</string>
    <string name="setari">Setari</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="calendar_fragment">Calendar fragment</string>
    <string name="setari_fragment">Setari fragment</string>
    <string name="statistici_fragment">Statistici fragment</string>
    <string name="open_nav">Open nav</string>
    <string name="close_nav">Close nav</string>
    <string name="invatare_fragment">Invatare fragment</string>
    <string name="show_option">Optiunea %1$s a fost apasata</string>
    <string name="lista_fragment">Lista fragment</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="inregistreaza_te_acum">Inregistreaza-te acum</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="apr_2023">Apr 2023</string>
    <string name="_10_00">10:00</string>
    <string name="event1">Event1</string>
    <string name="event2">Event2</string>
    <string name="event3">Event3</string>
    <string name="denumire">Denumire</string>
    <string name="program_fix">Program fix</string>
    <string name="ora_start">Ora start</string>
    <string name="interval_orar">Interval orar:</string>
    <string name="adauga_o_sarcina">Adauga o sarcina</string>
    <string name="seteaza_un_obiectiv">Seteaza un obiectiv</string>
    <string name="ora_sfarsit">Ora sfarsit</string>
    <string name="data">Data:</string>
    <string name="adauga">Adauga</string>
    <string name="tehnici_time_management">Tehnici time management</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="matricea_eisenhower">Matricea Eisenhower</string>
    <string name="dupa_4_sesiuni_de_lucru_ia_o_pauza_de_15_30_minute">Dupa 4 sesiuni de lucru, ia o pauza de 15-30 minute.</string>
    <string name="repeta_ultimii_doi_pasi">Repeta ultimii doi pasi.</string>
    <string name="ia_o_pauza_de_5_minute">Ia o pauza de 5 minute.</string>
    <string name="lucreaza_pana_expira_timpul">Lucreaza pana expira timpul.</string>
    <string name="seteaza_cronometrul_pentru_25_minute">Seteaza cronometrul pentru 25 minute.</string>
    <string name="alege_ti_o_sarcina_pe_care_sa_o_indeplinesti">Alege-ti o sarcina pe care sa o indeplinesti.</string>
    <string name="aplica">Aplica</string>
    <string name="aplica_metoda">Aplica metoda</string>
    <string name="seteaza_timp_de_lucru">Seteaza timp de lucru</string>
    <string name="seteaza_durata_pauza">Seteaza durata pauza</string>
    <string name="seteaza_durata_lucru">Seteaza durata lucru</string>
    <string name="seteaza_numar_sesiuni">Seteaza numar sesiuni</string>
    <string name="selecteaza_o_activitate">Selecteaza o activitate</string>
    <string name="start">Start</string>
    <string name="i_nm_np_no_nr_nt_na_nn_nt">I\nM\nP\nO\nR\nT\nA\nN\nT</string>
    <string name="n_ne_ni_nm_np_no_nr_nt_na_nn_nt">N\nE\nI\nM\nP\nO\nR\nT\nA\nN\nT</string>
    <string name="urgent">URGENT</string>
    <string name="neurgent">NEURGENT</string>
    <string name="alege_activitate">Alege activitate</string>
    <string name="durata">Durata:</string>
    <string name="frecventa">Frecventa:</string>
    <string name="descriere">Descriere</string>
    <string name="status">Status</string>
    <string name="_12_00">12:00</string>
    <string name="iunie">iunie</string>
    <string name="_6">6</string>
    <string name="string_default">-</string>
    <string name="editeaza_eveniment">Editeaza eveniment</string>
    <string name="alege_un_eveniment">Alege un eveniment:</string>
    <string name="alege_intervale">Alege intervale:</string>
    <string name="lu">Lu</string>
    <string name="ma">Ma</string>
    <string name="mi">Mi</string>
    <string name="jo">Jo</string>
    <string name="vi">Vi</string>
    <string name="sa">Sa</string>
    <string name="du">Du</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="eveniment_unic">Eveniment unic</string>
    <string name="obiectiv">Obiectiv</string>
    <string name="acest_camp_este_obligatoriu">Acest camp este obligatoriu!</string>
    <string name="ori_pe">ori pe</string>
    <string name="eveniment_nou">Eveniment nou</string>
    <string name="monday">Monday</string>
    <string name="calendar">Calendar</string>
    <string name="ioana">Ioana</string>
    <string name="nu_sunt_evenimente_programate_in_aceasta_zi">Nu sunt evenimente programate in aceasta zi!</string>
    <string name="zi">Zi</string>
    <string name="saptamana">Saptamana</string>
    <string name="minute">minute</string>
    <string-array name="unitati_frecventa">
        <item>zi</item>
        <item>saptamana</item>
    </string-array>
    <string-array name="intervale_preferinta">
        <item>oricare</item>
        <item>dimineata</item>
        <item>pranz</item>
        <item>dupa-amiaza</item>
        <item>seara</item>
    </string-array>
    <string-array name="optiuni_status">
        <item>FINALIZAT</item>
        <item>NEINCEPUT</item>
        <item>INCEPUT</item>
    </string-array>
    <string name="interval_date_hours">%1$s : %2$s - %3$s</string>
    <string name="selecteaza_toate">Selecteaza toate</string>
    <string name="programeaza">Programeaza</string>
    <string name="anuleaza">Anuleaza</string>
    <string name="preferinta_interval">Preferinta interval</string>
    <string name="change_status">Change status</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="salveaza">Salveaza</string>
    <string name="nu_exista_evenimente_saptamana">Nu exista evenimente programate in aceasta saptamana!</string>
    <string name="total_minute_petrecute_din_fiecare_categorie">Total minute petrecute din fiecare categorie</string>
    <string name="filters">Filters</string>
    <string name="weekview_calendar">WeekView Calendar</string>
    <string name="sterge">Sterge</string>
    <string name="event_category_colors">Event Category Colors</string>
    <string name="intalnire">Intalnire</string>
    <string name="sedinta">Sedinta</string>
    <string name="munca">Munca</string>
    <string name="tema">Tema</string>
    <string name="gospodarit">Gospodarit</string>
    <string name="relaxare">Relaxare</string>
    <string name="sport">Sport</string>
    <string name="proiect">Proiect</string>
    <string name="deadline">Deadline</string>
    <string name="altele">Altele</string>
    <string name="ringtone">Ringtone</string>
    <string name="selecteaza_o_melodie">Selecteaza o melodie</string>
    <string-array name="spn_filter_data_values">
        <item>-</item>
        <item>Trecut</item>
        <item>Azi</item>
        <item>Saptamana curenta</item>
        <item>Luna curenta</item>
        <item>Viitor</item>
    </string-array>
    <string-array name="ringtone_entries">
        <item>Ringtone 1</item>
        <item>Ringtone 2</item>
        <item>Ringtone 3</item>
    </string-array>
    <string-array name="ringtone_values">
        <item>ringtone1_uri</item>
        <item>ringtone2_uri</item>
        <item>ringtone3_uri</item>
    </string-array>
</resources>