<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/acasa"/>

        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/lista_sarcini"/>

        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/study"/>

        <item
            android:id="@+id/nav_statistici"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/statistici"/>

        <item
            android:id="@+id/nav_setari"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setari"/>

    </group>

    <item
        android:title="@string/tehnici_time_management">
        <menu>
            <item
                android:id="@+id/nav_pomodoro"
                android:icon="@drawable/ic_baseline_timer_24"
                android:title="@string/pomodoro"/>
            <item
                android:id="@+id/nav_eisenhower"
                android:icon="@drawable/ic_baseline_border_all_24"
                android:title="@string/matricea_eisenhower"/>
        </menu>
    </item>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>