<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeekViewFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPrevWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/prev"
            android:textColor="@color/bleumarin"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMonthDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/apr_2023"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNextWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/next"
            android:textColor="@color/bleumarin"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWeekDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_marginStart="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lu"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ma"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mi"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jo"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vi"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sa"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/du"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWeekDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llWeekDays"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/tvLuDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_19"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMaDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_20"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMiDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_21"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvJoDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_22"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvViDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_23"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvSaDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_24"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvDuDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_25"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvWeekView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llWeekDates">

        <LinearLayout
            android:id="@+id/linear_layout_nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <!-- Include the layout_column_hour.xml here -->
        <include layout="@layout/layout_weekview_hours_column" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7">

            <!-- Monday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMonday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Tuesday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Wednesday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Thursday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvThursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Friday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFriday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Saturday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSaturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Sunday -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>