<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".StatisticiFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrevDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/prev"
            android:textColor="@color/bleumarin"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMonthDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/apr_2023"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNextDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/next"
            android:textColor="@color/bleumarin"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvNoEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nu_sunt_evenimente_programate_in_aceasta_zi"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/popup_shape"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_margin="10dp" />

</LinearLayout>