<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llItemData"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/popup_shape"
        android:backgroundTint="@color/caldarkorange"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvItemStartHour"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/tvItemDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="28sp" />
        <TextView
            android:id="@+id/tvItemMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/iunie"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvItemStartHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llItemData"
        app:layout_constraintEnd_toStartOf="@+id/tvItemTitle"
        app:layout_constraintBottom_toTopOf="@+id/tvItemFinishHour"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_10_00"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tvItemFinishHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvItemStartHour"
        app:layout_constraintStart_toEndOf="@+id/llItemData"
        app:layout_constraintEnd_toStartOf="@+id/tvItemTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_12_00"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvItemStartHour"
        app:layout_constraintBottom_toTopOf="@+id/tvItemStatus"
        android:layout_margin="8dp"
        android:text="@string/denumire"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvItemStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvItemTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>