<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/tvTime"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/_10_00"/>

    <LinearLayout
        android:id="@+id/layoutOra"
        android:background="@color/lightgray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/cell_shape"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/cell1"
            android:textSize="12sp"
            android:lines="2"
            android:textColor="@color/white"
            android:text="@string/event1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/cell_shape"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/cell2"
            android:textSize="12sp"
            android:lines="2"
            android:textColor="@color/white"
            android:text="@string/event2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/cell_shape"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/cell3"
            android:textSize="12sp"
            android:lines="2"
            android:textColor="@color/white"
            android:text="@string/event3"/>
    </LinearLayout>

</LinearLayout>