<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment"
    android:id="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPrevDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            android:textColor="@color/bleumarin"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvMonthDay"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/apr_2023"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnNextDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/bleumarin"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Monday"
        android:layout_marginBottom="20dp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Event"
        android:textColor="@color/bleumarin"
        android:background="@null"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/lvHour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>


</LinearLayout>